asg-ec2-app-stack/base-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-pool
spec:
  ports:
  - name: http
    port: 80
    targetPort: envoy
  - name: admin
    port: 9901
    targetPort: envoy-admin
